<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <SurfaceView
        android:id="@+id/my_surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="right|top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/play_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:alpha="0.5"
            android:background="@android:drawable/editbox_background"
            android:textColor="@color/white"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mp_surface_btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="@string/video_control_pause"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/mp_surface_btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="@string/video_control_stop"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/mp_surface_btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="@string/btn_info_show"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>
